fix: 사파리 브라우저에서 <i> 요소의 자식에 다른 인라인 요소가 포함되어있으면 vertical-align 속성이 적용되지 않는 문제 수정

--- a/scss/_inlines.scss
+++ b/scss/_inlines.scss
@@ -4,11 +4,14 @@
   // ----------------------------------------------
   i {
     font-size: .85em;
-    vertical-align: top;
     font-style: normal;
     opacity: .54;
     padding: 0 0.2em 0 0.1em;
     letter-spacing: -.5px;
+    
+    &, * {
+      vertical-align: top;  
+    }
   }
 
   // ----------------------------------------------
